--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,11 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.1.0.RC1'
+    }
+    repositories {
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -25,6 +30,12 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
+}
+
 ext {
     springCloudVersion = 'Finchley.RELEASE'
     isCloud = System.properties['cloud'] == 'true'
@@ -38,35 +49,35 @@ ext {
 }
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-    compile('org.springframework.boot:spring-boot-starter-cache')
-    compile('org.springframework.data:spring-data-rest-hal-browser')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-actuator')
+    implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+    implementation('org.springframework.boot:spring-boot-starter-cache')
+    implementation('org.springframework.boot:spring-boot-starter-security')
+    implementation('org.springframework.cloud:spring-cloud-starter')
+    implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
+    implementation('io.jsonwebtoken:jjwt:0.9.0')
+
+    implementation('org.springframework.data:spring-data-rest-hal-browser')
     runtime('net.logstash.logback:logstash-logback-encoder:4.11')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.5.RELEASE')
-    compile('io.jsonwebtoken:jjwt:0.9.0')
-    compile('org.webjars:bootstrap:3.3.4')
-    compile('org.webjars:webjars-locator:0.30')
-    compile('io.springfox:springfox-swagger2:2.9.2')
-    compile('io.springfox:springfox-swagger-ui:2.9.2')
-    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
-//    compileOnly('org.projectlombok:lombok')
-//    annotationProcessor 'org.projectlombok'
-    runtime('org.springframework.boot:spring-boot-devtools')
-    compile('org.springframework.cloud:spring-cloud-starter')
+
+    implementation('org.webjars:bootstrap:3.3.4')
+    implementation('org.webjars:webjars-locator:0.30')
+    implementation('io.springfox:springfox-swagger2:2.9.2')
+    implementation('io.springfox:springfox-swagger-ui:2.9.2')
+    compileOnly('org.projectlombok:lombok')
+    runtimeOnly('org.springframework.boot:spring-boot-devtools')
     if (isCloud) {
         runtime('org.springframework.cloud:spring-cloud-starter-sleuth')
     }
     if (isWls) {
         providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     }
-    testCompile('org.springframework.boot:spring-boot-starter-test') {
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude(module: 'commons-logging')
     }
-    testCompile('org.springframework.security:spring-security-test')
-    testCompile('com.google.guava:guava-testlib:20.0')
+    testImplementation('org.springframework.security:spring-security-test')
+    testImplementation('com.google.guava:guava-testlib:20.0')
 }
 
 dependencyManagement {
