--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,10 @@ dependencies {
     implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
     implementation('org.springframework.boot:spring-boot-starter-cache')
     implementation('org.springframework.boot:spring-boot-starter-security')
+
+    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.0.RC1')
+
     implementation('org.springframework.cloud:spring-cloud-starter')
-    implementation('org.springframework.cloud:spring-cloud-starter-oauth2')
     implementation('io.jsonwebtoken:jjwt:0.9.0')
 
     implementation('org.springframework.data:spring-data-rest-hal-browser')
